# danreev.es

./: .editorconfig  .eslintrc  .gitignore  .gitmodules  .nvimrc  .travis.yml  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  Procfile  README.md  TODO.md  _config.yml  all.css  all.js  app.json  client.tsx  deno.json  entry.ts  feed.xml  fresh.gen.ts  gulpfile.js  importMap.json  index.html  keybase.txt  logan.html  now.json  package-lock.json  package.json  readme  readme.md  render.yaml  screen-test.html  search.json  server.js  server.tsx  shard.yml  (+3 more)
_data/: games.yaml  projects.yaml
_drafts/: coding-with-dates.md  jekyll-search-with-typeahead.md  rich-markup.md  steal-like-an-artist.md  switch-to-github-pages.md  types-and-coersion.md
_layouts/: default.html  post.html
_posts/: 2013-10-06-new-site.md  2013-10-08-show-hide-hidden-files-osx.md  2013-11-19-switch-to-github-pages.md  2013-11-21-simple-is-beautiful.md  2014-01-12-jekyll-search-with-typeahead.md  2014-01-19-getting-started-with-gulp.md  2014-06-12-guide-to-gulp.md  2014-09-26-fffunctions-css.md  2014-12-18-2014-games-of-the-year.md  2015-02-28-steal-like-an-artist.md  2015-06-28-edgeconf-london-2015.md
api/: writing.ts
app/: about.tsx  app.tsx  button.tsx  lang.tsx  loader.tsx
components/: base.js  box.js  intro.js  link-section.js
css/: main.css
games/: index.html
layouts/: default.html  default.js
lib/: .shards.info
links/: index.html
oldsrc/: article.rs
pages/: _document.js  coffee.md  contact.js  contact.md  github.js  glitch.js  index.js  index.md  posts.js  (+3 more)
(+198 files in other folders)
