[package]
name = "my-web-site"
version = "0.1.0"
authors = ["Dan Reeves <hey@danreev.es>"]

[package.metadata.commands]
dev = "systemfd --no-pid -s http::3000 -- cargo watch -x run"

[dependencies]
listenfd = "0.3.3"
actix-web = "0.7.13"
maud = { version = "0.19.0", features = ["actix-web"] }
comrak = "0.3.1"
dissolve = "0.2.2"
serde_derive = "1.0.80"
serde = "1.0.80"
pretty_env_logger = "0.2.5"
lazy_static = "1.1.0"
regex = "1.0.5"
toml = "0.4.8"
chrono = "0.4.6"
failure = "0.1.3"
